--- a/dotnet-webapi.csproj
+++ b/dotnet-webapi.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>dotnet_webapi</RootNamespace>
   </PropertyGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
+    <PackageReference Include="NumSharp" Version="0.30.0" />
+  </ItemGroup>
 
 </Project>
